# freecodecamp-gear-protocol

./: Cargo.toml  README.md
input-msg/: .binpath  Cargo.toml
input-msg/src/: lib.rs
messages/: .binpath  Cargo.toml  build.rs
messages/io/: Cargo.toml
messages/io/src/: lib.rs
messages/src/: lib.rs
receive-joke/: .binpath  Cargo.toml
receive-joke/src/: lib.rs
